# memoryOS

./: .gitignore  .mcp.json  LICENSE  README.md  docker-compose.yml
server/: .env.example  alembic.ini  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 0001_initial.py  0002_users.py
server/recallos/: __init__.py  config.py
server/recallos/adapters/: __init__.py
server/recallos/adapters/auth/: __init__.py  jwt_verifier.py
server/recallos/adapters/memory/: __init__.py  cognee_engine.py  cognee_runtime.py  fake.py
server/recallos/adapters/ontology/: __init__.py  file_repository.py
server/recallos/adapters/persistence/: __init__.py  in_memory.py  models.py  postgres.py  user_repo.py
server/recallos/adapters/scoring/: __init__.py  fake.py  gemini_scorer.py
server/recallos/api/: __init__.py  app.py  deps.py  errors.py  ratelimit.py  schemas.py
server/recallos/api/routers/: v1.py
server/recallos/apps/: __init__.py
server/recallos/apps/interview_prep/: __init__.py
server/recallos/apps/interview_prep/ontologies/: backend_sde.yaml
server/recallos/core/: __init__.py
server/recallos/core/application/: __init__.py
server/recallos/core/application/ports/: __init__.py  answer_scorer.py  (+4 more)
server/recallos/core/domain/: __init__.py  competency.py  diagnosis.py  errors.py  graph.py  identity.py  mastery.py  scoring.py
server/recallos/scripts/: __init__.py  reset_demo.py
server/tests/: conftest.py
server/tests/adapters/: test_file_ontology_repository.py  test_gemini_scorer.py  test_jwt_verifier.py
server/tests/api/: test_api.py  test_api_integration.py  test_rate_limit.py
server/tests/application/: test_reset_learner_memory.py  test_score_answer.py  test_verbs.py
server/tests/contracts/: base.py  test_cognee_memory_engine.py  test_end_to_end.py  test_fake_memory_engine.py  test_in_memory_ledger.py  test_postgres_ledger.py
server/tests/domain/: test_competency_graph.py  test_mastery_projector.py  test_prereq_graph.py  test_root_cause_analyzer.py
(+75 files in other folders)
