[project]
name = "recallos"
version = "0.1.0"
description = "RecallOS — a competency-graph memory platform on Cognee. Interview prep is the first app."
requires-python = ">=3.11,<3.13"
dependencies = [
    # Pinned to the installed version. Cognee's API surface moves across releases
    # (1.x introduced native remember/recall/improve/forget + access control), so the
    # integration is built against this exact version. Bump deliberately + re-run the
    # adapter contract tests.
    "cognee==1.2.1",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pydantic-settings",
    "python-dotenv",
    "pyyaml",
    "pyjwt[crypto]",
    "slowapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "import-linter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recallos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
# Default run is fast + offline. Live integration tests (Cognee/Gemini/Postgres) are
# opt-in: run them with `pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: hits live external services (Cognee/Gemini/Postgres)",
]

[tool.black]
line-length = 90

[tool.isort]
profile = "black"
line_length = 90

# Enforces the Clean Architecture boundary at build time: the platform core must
# stay pure. This is the architectural invariant everything else depends on.
[tool.importlinter]
root_packages = ["recallos"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Core is pure (no infrastructure or outer-layer imports)"
type = "forbidden"
source_modules = ["recallos.core"]
forbidden_modules = [
    "cognee",
    "fastapi",
    "sqlalchemy",
    "openai",
    "yaml",
    "recallos.adapters",
    "recallos.apps",
    "recallos.api",
]
